# horse-logic

./: .gitignore  .gitkeep  .pre-commit-config.yaml  Dockerfile  README.md  README_pdm.md  README_template.md  pyproject.toml  requirements.txt  sample_initial_setup.sh
.devcontainer/: README_devcontainer.md
.streamlit/: README_streamlit_config.md  config.toml
data/: experiment_log.txt  experiment_parameters.xlsx  experiment_subjects.xlsx  experiment_tracking.xlsx  experimental_parameters.xlsx  mock_data.txt  trial_parameters_log.txt
docs/: README_experiment.md  README_experiment_types.md  TODO.md  additional_questions.md  app_github.md  app_main.md  background_info.md  directory_structure.md  google_colab_intro.md  hardware.md  research_links.md
docs/from_cath/: Exp design-RPi doc.docx
docs/provided/: 1Button_manual_testcode.py  2Final_RPE_code_DRAFT.py  2Final_RPE_code_DRAFT1.py  4RPE_timelog_sequence_tones.py  4buzzer_touch2_counts_touchonly_servo.py  Sample data.xlsx  (+11 more)
notebooks/: analyse-sample-results.ipynb  analyse-synthetic-results.ipynb  analyse_sensor_data.ipynb  backup_data_google_drive.ipynb  base_experiment_testing.ipynb  experimental_parameters.ipynb  simulate_senor_data.ipynb  simulate_trials.ipynb  testing-log-parameters.ipynb  testing_experiment_subjects.ipynb  testing_experiment_tracking.ipynb  verify_dataclass_definitions.ipynb
src/: 2Final_RPE_code.py  4RPE_timelog_sequence_tones_datalog.py  AppName.py  Cognitive_Bias.py  Final_RPE.py  README_data_logging.md  README_experiment.md  app_config.toml  base_experiment.py  cb_experiment_sounds.py  cb_helper.py  experiment.py  experiment_helper.py  experiment_sounds.py  hardware.py  st_helper.py
(+23 files in other folders)
