
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "pandas>=2.0.2",
    "matplotlib>=3.7.1",
    "fastparquet>=2023.4.0",
    "pandera>=0.14.5",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "notebook>=6.5.4",
    "black[jupyter]>=23.3.0",
]
